# runelink

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.posting/: add-user-associated-domain.posting.yaml  add-user-to-server.posting.yaml  create-channel.posting.yaml  create-server-scripts.py  create-server.posting.yaml  create-user-scripts.py  create-user.posting.yaml  dev.env  dev.env.example  get-channel-by-id.posting.yaml  get-host-by-domain.posting.yaml  get-hosts.posting.yaml  get-message-by-id.posting.yaml  get-messages-by-channel.posting.yaml  get-messages-by-server.posting.yaml  get-messages.posting.yaml  get-server-by-id.posting.yaml  get-server-with-channels.posting.yaml  get-servers.posting.yaml  get-user-associated-domains.posting.yaml  get-user-by-id.posting.yaml  get-user-by-name-and-domain.posting.yaml  get-user-server-memberships.posting.yaml  get-users.posting.yaml  ping.posting.yaml  post-message.posting.yaml  post-user.posting.yaml  remove-user-associated-domain.posting.yaml  send-message-scripts.py  send-message.posting.yaml
migrations/: 20250505055359_create_users.up.sql  20250512023613_create_channels_and_messages.down.sql  20250512023613_create_channels_and_messages.up.sql  20250512023613_create_messages.down.sql  (+4 more)
runelink-server/: .env.example  Cargo.toml
runelink-server/.posting/: create-channel-scripts.py  create-server.posting.yaml  create-user.posting.yaml  dev.env.example  get-server-channels.posting.yaml  get-server-members.posting.yaml  ping.posting.yaml
runelink-server/migrations/: 20250512023613_initial_schema.down.sql  20250520015750_create_server_users_table.up.sql  20250529225120_create_user_associated_domains.down.sql  20250529225120_create_user_associated_domains.up.sql  20250604175803_remote_servers.down.sql  20250604175803_remote_servers.up.sql  20250610210732_local_accounts.down.sql  20250610210732_local_accounts.up.sql  20250909202138_refresh_tokens.up.sql  20260120175237_update_local_accounts_fkey.down.sql  20260120175237_update_local_accounts_fkey.up.sql  20260126065119_user_roles.down.sql  20260126065119_user_roles.up.sql  20260217005146_initial_schema_v2.down.sql  20260217005146_initial_schema_v2.up.sql
runelink-server/src/: auth.rs  bearer_auth.rs  config.rs  crypto.rs  db.rs  error.rs  jwks_resolver.rs  key_manager.rs  main.rs  state.rs
runelink-server/src/api/: auth.rs  channels.rs  hosts.rs  memberships.rs  messages.rs  mod.rs  server_members.rs  servers.rs  users.rs
runelink-server/src/ops/: channels.rs  hosts.rs  memberships.rs  messages.rs  mod.rs  server_members.rs  servers.rs  users.rs
runelink-server/src/queries/: accounts.rs  channels.rs  hosts.rs  memberships.rs  messages.rs  mod.rs  server_members.rs  servers.rs  tokens.rs  users.rs
runelink-term/: Cargo.toml
runelink-term/src/: cli.rs  error.rs  main.rs  storage.rs  storage_auth.rs  util.rs
runelink-term/src/cli/: account.rs  channels.rs  config.rs  context.rs  domain_query.rs  input.rs  messages.rs  mod.rs  select.rs  servers.rs  users.rs
runelink-term/src/requests/: channels.rs  generic.rs  messages.rs  mod.rs  servers.rs  users.rs
runelink-types/: Cargo.toml
runelink-types/src/: auth.rs  channel.rs  host.rs  lib.rs  message.rs  server.rs  user.rs
(+40 files in other folders)
