[package]
name = "opencord-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
