[package]
name = "runelink-server"
version = "0.1.0"
edition = "2024"

[dependencies]
runelink-client = { path = "../runelink-client" }
runelink-types = { path = "../runelink-types", features = [ "sqlx" ] }
axum = "0.8.4"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time"
] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
rand = "0.9.2"
