[package]
name = "runelink-term"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
runelink-types = { path = "../runelink-types" }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
