[package]
name = "runelink-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time"
] }
time = { version = "0.3.41", features = ["serde", "formatting"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
